@@ -14,6 +14,7 @@ package org.eclipse.ditto.thingsearch.service.persistence.write.streaming;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 import org.bson.BsonDocument;
@@ -123,8 +124,8 @@ final class MongoSearchUpdaterFlow {
         } else {
             theCollection = collection;
         }
-        final var abstractWriteModels = pairs.stream().map(Pair::first).collect(Collectors.toList());
-        final var writeModels = pairs.stream().map(Pair::second).collect(Collectors.toList());
+        final var abstractWriteModels = pairs.stream().map(Pair::first).toList();
+        final var writeModels = pairs.stream().map(Pair::second).toList();
 
         if (writeModels.isEmpty()) {
             LOGGER.debug("Requested to make empty update by write models <{}>", abstractWriteModels);
@@ -134,16 +135,34 @@ final class MongoSearchUpdaterFlow {
             return Source.empty();
         }
 
-        LOGGER.debug("Executing BulkWrite <{}>", writeModels);
+        final String bulkWriteCorrelationId = UUID.randomUUID().toString();
+        if (LOGGER.isDebugEnabled()) {
+            LOGGER.withCorrelationId(bulkWriteCorrelationId)
+                    .debug("Executing BulkWrite containing [<thingId>:{correlationIds}:<filter>]: {}", abstractWriteModels.stream()
+                            .map(writeModel -> "<" + writeModel.getMetadata().getThingId() + ">:" +
+                                    writeModel.getMetadata().getEventsCorrelationIds()
+                                            .stream()
+                                            .collect(Collectors.joining(",", "{", "}"))
+                                    + ":<" + writeModel.getFilter() + ">"
+                            )
+                            .toList());
+
+            // only log the complete MongoDB writeModels on "TRACE" as they get really big and almost crash the logging backend:
+            LOGGER.withCorrelationId(bulkWriteCorrelationId)
+                    .trace("Executing BulkWrite <{}>", writeModels);
+        }
         final var bulkWriteTimer = startBulkWriteTimer(writeModels);
         return Source.fromPublisher(theCollection.bulkWrite(writeModels, new BulkWriteOptions().ordered(false)))
-                .map(bulkWriteResult -> WriteResultAndErrors.success(abstractWriteModels, bulkWriteResult))
+                .map(bulkWriteResult -> WriteResultAndErrors.success(
+                        abstractWriteModels, bulkWriteResult, bulkWriteCorrelationId))
                 .recoverWithRetries(1, new PFBuilder<Throwable, Source<WriteResultAndErrors, NotUsed>>()
                         .match(MongoBulkWriteException.class, bulkWriteException ->
-                                Source.single(WriteResultAndErrors.failure(abstractWriteModels, bulkWriteException))
+                                Source.single(WriteResultAndErrors.failure(
+                                        abstractWriteModels, bulkWriteException, bulkWriteCorrelationId))
                         )
                         .matchAny(error ->
-                                Source.single(WriteResultAndErrors.unexpectedError(abstractWriteModels, error))
+                                Source.single(WriteResultAndErrors.unexpectedError(
+                                        abstractWriteModels, error, bulkWriteCorrelationId))
                         )
                         .build()
                 )
